fixed how it looks on mobile device

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ div.navbar-brand {
 }
 
 main {
-  margin: 11em;
+  margin: 9em;
 }
 
 .label {
@@ -28,8 +28,8 @@ footer.footer {
   background-color: gray;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 586px) {
   main {
-    margin: 10em 10em 10em 10em;
+    margin: 2em 2em 2em 2em;
   }
 }
